VFS-6302 fixed token-editor caveats sections spacing in mobile view

--- a/src/app/styles/token-editor.scss
+++ b/src/app/styles/token-editor.scss
@@ -294,6 +294,13 @@
     .pathSpace-field {
       width: 150px;
     }
+
+    .regionCaveat-field,
+    .asnCaveat-field,
+    .consumerCaveat-field,
+    .readonlyCaveat-field {
+      padding-top: $padding-base-vertical;
+    }
   }
 }
 
